# mipt_formal_regular

./: CMakeLists.txt  Description_and_correctness_algorithm  README  main.cpp
Test/: CMakeLists.txt  main_test.cpp  test_regular.cpp  test_regular.h
cmake/: CodeCoverage.cmake
include/: regular.h
src/: CMakeLists.txt  regular.cpp
